# CrewAI_Demystified

./: .gitignore  3. Code Notebook.ipynb  5. Logistic_Analysis.ipynb  CLAUDE.md  README.md  pyproject.toml  requirements.txt
01. Building your First AI Agent with CrewAI/: 1. Stateful_Applications_with_CrewAI.py  2. Research Assistant in CrewAI.ipynb  3. Code Notebook.ipynb  4. Workflow_with_CrewAI.ipynb
01_basics/: stateful_culinary_assistant.ipynb
02. Building Advanced AI Agents with CrewAI/: 1. Fitness_Progress_Tracker.ipynb  2. Dynamic_Travel_Advisor.ipynb  3. Advanced_Images_Generation.ipynb  3. Advanced_Images_Generation_Notebook.ipynb  4. Personalized_Book_Recommendation.py  6. Fraud_Detection.ipynb  8. Automated_Document_Summarization.ipynb  Link.md  output_data.csv
03. Building a Multi-Agent AI-Powered Mock Interviewer using CrewAI/: README.md
04. Building a Social Media Agent using CrewAI/: Instagram.ipynb
06. Multi-agent Customer Support Automation/: L3_customer_support.ipynb
07. Customer Outreach Campaign/: L4_tools_customer_outreach.ipynb
08. Automate Event Planning/: L5_tasks_event_planning.ipynb  marketing_report.md  venue_details.json
1. Building your First AI Agent with CrewAI/: 3. Code Notebook.ipynb  5. Logistic_Analysis.ipynb
11. Personalized Education Assistant/: notebook copy.ipynb  notebook.ipynb
2. Building Advanced AI Agents with CrewAI/: 1. Fitness_Progress_Tracker.py  (+9 more)
Building a Multi-Agent AI-Powered Mock Interviewer using CrewAI/: chatbot_ui.py  interview_practice_system.py  link.txt  pyproject.toml  ruff.toml
(+21 files in other folders)
