[project]
name = "crewai_demystified"
version = "0.1.0"
description = "CrewAI Demystified"
requires-python = ">=3.11"
dependencies = [
    # Core CrewAI
    "crewai[tools]",
    # LangChain integrations
    "langchain-community",
    "langchain-openai",
    "langchain-groq",
    # Data validation
    "pydantic",
    # Environment management
    "python-dotenv",
    # Async support for nested event loops (used in notebooks)
    "nest-asyncio",
    # Markdown rendering
    "markdown",
]
[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "jupyter>=1.1.1",
    "ipython>=9.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helpers"]
